@@ -1,12 +1,0 @@
-[buildout]
-parts = configobj
-index = http://pypi.gocept.com/simple
-versions = versions
-
-[versions]
-setuptools = 1.4.2
-configobj = 4.7.2
-
-[configobj]
-recipe = zc.recipe.egg
-interpreter = py
